[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E", "F", "I"]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.poetry]
name = "crossai-ts-chaquopy"
version = "0.0.1"
description = "An open-source Python library for developing end-to-end AI pipelines for Time Series Analysis"
authors = [
    "Pantelis Tzamalis <tzamalis@ceid.upatras.gr>",
    "George Kontogiannis <g.kontogiannis@ac.upatras.gr>",
]
readme = "README.md"
packages = [{ include = "caits", from = "." }]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.3.2"
pydub = "0.25.1"
pyyaml = "6.0.1"
resampy = "0.3.1"
samplerate = "0.1.0"
scikit-learn = "1.1.3"
scipy = "1.4.1"
seaborn = "0.12.2"
soundfile = "0.10.3.post1"
soxr = "0.3.6"
tqdm = "4.66.2"
tsaug = "0.2.1"
typing-extensions = "^4.8.0"
numpy = "1.19.5"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
